# quanda_knowledge_base_pipeline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.agent_config/: AGENT.md
.agent_config/rules/: metadata-extraction.md
.agent_config/skills/: extract-metadata.md
.github/workflows/: build.yaml  cd.yml  ci.yml
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  compact.py  upload.py
src/conf/: __init__.py  container.py  kafka.py  settings.py
src/events/: __init__.py
src/events/v1/: __init__.py  compact.py
src/external_service/: agent.py  bedrock.py  s3.py
src/schema/v1/: compact_event.py
src/services/: agent.py  compact.py  s3.py
src/utils/: datetime.py
tests/: conftest.py  test_health.py  test_main.py
tests/api/v1/: test_upload.py
tests/events/: test_handlers.py
tests/services/: test_s3.py
